# lightly-studio

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
.github/workflows/: fast_track_bot.yml  fast_track_guardrails.yml
fast_track/: .gitignore  Makefile  README.md  package-lock.json  package.json
image_gen/: create_dataset.py  qwen25vl_embedding_generator.py
lightly_studio/: .env.example  Makefile  pyproject.toml
lightly_studio/docs/: mkdocs.yml
lightly_studio/e2e-tests/: index_distribution.py
lightly_studio/tests/: conftest.py  helpers_resolvers.py
lightly_studio_view/: eslint.complexity.config.js
tritonserver/: .gitignore
tritonserver/scripts/: infer_images.py  infer_text.py
tritonserver/server/: .gitignore  Dockerfile  docker-compose.yml  prometheus.yml  (+1 more)
tritonserver/server/shared_deps_server/: pyproject.toml
tritonserver/server/shared_deps_server/src/shared_deps/: __init__.py  mobileclip_compile.py  mobileclip_export.py  mobileclip_image_encoder.py  mobileclip_text_encoder.py
tritonserver/server/shared_deps_server/src/shared_deps/mobileclip/: __init__.py  clip.py  image_encoder.py  text_encoder.py
tritonserver/server/shared_deps_server/src/shared_deps/mobileclip/models/: mci.py  vit.py
tritonserver/server/shared_deps_server/src/shared_deps/mobileclip/modules/common/: transformer.py
tritonserver/server/shared_deps_server/src/shared_deps/mobileclip/modules/image/: image_projection.py
tritonserver/server/shared_deps_server/src/shared_deps/mobileclip/modules/text/: repmixer.py
tritonserver/server/shared_deps_server/tests/: test_mobileclip.py  test_mobileclip_export.py
(+439 files in other folders)
