[project]
name = "shared-deps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lionel", email = "lionel@lightly.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
    "open-clip-torch>=2.20",
    "Pillow>=10.0",
    "timm>=0.9.5",
    "torch>=2.5,<3",
]

[project.scripts]
shared-deps = "shared_deps:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
